@@ -5,7 +5,6 @@ import graphql.relay.DefaultEdge;
 import graphql.relay.DefaultPageInfo;
 import graphql.relay.Edge;
 import graphql.schema.DataFetchingEnvironment;
-import no.sikt.graphql.helpers.EnvironmentUtils;
 import no.sikt.graphql.helpers.functions.DataLoaderMapper;
 import no.sikt.graphql.helpers.selection.ConnectionSelectionSet;
 import no.sikt.graphql.helpers.selection.SelectionSet;
@@ -14,7 +13,6 @@ import org.apache.commons.lang3.tuple.Pair;
 import org.dataloader.DataLoader;
 import org.dataloader.DataLoaderFactory;
 import org.dataloader.MappedBatchLoaderWithContext;
-import org.jooq.DSLContext;
 
 import java.util.List;
 import java.util.Map;
@@ -23,31 +21,13 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-public abstract class AbstractFetcher {
-    protected final DataFetchingEnvironment env;
-    protected final String executionPath;
-    protected final DSLContext ctx;
-    protected final SelectionSet selection, connectionSelection;
-
+public abstract class AbstractFetcher extends EnvironmentHandler {
     /**
      * Create a dataloader for a resolver.
      * @param env Environment for the resolver.
      */
     protected AbstractFetcher(DataFetchingEnvironment env) {
-        this.env = env;
-        this.ctx = env.getLocalContext();
-
-        this.selection = ResolverHelpers.getSelectionSet(env);
-        this.connectionSelection = new ConnectionSelectionSet(EnvironmentUtils.getSelectionSetsFromEnvironment(env));
-        this.executionPath = env.getExecutionStepInfo().getPath().toString();
-    }
-
-    public DataFetchingEnvironment getEnv() {
-        return env;
-    }
-
-    public DSLContext getCtx() {
-        return ctx;
+        super(env);
     }
 
     protected <K> KeyWithPath<K> asKeyPath(K key) {
@@ -61,7 +41,7 @@ public abstract class AbstractFetcher {
     protected <K, V> DataLoader<KeyWithPath<K>, V> getLoader(String resolveName, DataLoaderMapper<KeyWithPath<K>, V> mapFunction) {
         return env.getDataLoaderRegistry().computeIfAbsent(resolveName, name ->
                 DataLoaderFactory.newMappedDataLoader((MappedBatchLoaderWithContext<KeyWithPath<K>, V>) (keys, batchEnvLoader) ->
-                        mapFunction.map(keys, new SelectionSet(EnvironmentUtils.getSelectionSetsFromEnvironment(batchEnvLoader)))
+                        mapFunction.map(keys, new SelectionSet(getSelectionSetsFromEnvironment(batchEnvLoader)))
                 )
         );
     }
@@ -69,12 +49,12 @@ public abstract class AbstractFetcher {
     protected <K, V> DataLoader<KeyWithPath<K>, V> getConnectionLoader(String resolveName, DataLoaderMapper<KeyWithPath<K>, V> mapFunction) {
         return env.getDataLoaderRegistry().computeIfAbsent(resolveName, name ->
                 DataLoaderFactory.newMappedDataLoader((MappedBatchLoaderWithContext<KeyWithPath<K>, V>) (keys, batchEnvLoader) ->
-                        mapFunction.map(keys, new ConnectionSelectionSet(EnvironmentUtils.getSelectionSetsFromEnvironment(batchEnvLoader)))
+                        mapFunction.map(keys, new ConnectionSelectionSet(getSelectionSetsFromEnvironment(batchEnvLoader)))
                 )
         );
     }
 
-    protected <K, V> Map<KeyWithPath<K>, V> resultAsMap(Map<KeyWithPath<K>, String> keyToId, Map<String, V> dbResult) {
+    protected static <K, V> Map<KeyWithPath<K>, V> resultAsMap(Map<KeyWithPath<K>, String> keyToId, Map<String, V> dbResult) {
         return keyToId
                 .entrySet()
                 .stream()
@@ -91,33 +71,21 @@ public abstract class AbstractFetcher {
                 );
     }
 
-    protected <K> Map<KeyWithPath<K>, String> getKeyToId(Set<KeyWithPath<K>> keys) {
+    protected static <K> Map<KeyWithPath<K>, String> getKeyToId(Set<KeyWithPath<K>> keys) {
         return keys.stream().collect(Collectors.toMap(s -> s, s -> s.toString().substring(s.toString().lastIndexOf("||") + 2)));
     }
 
-    protected <T, C> C getPaginatedConnection(List<Pair<String, T>> dbResult, int pageSize, Integer totalCount, int maxNodes, Function<ConnectionImpl<T>, C> connectionFunction) {
+    protected static <T, C> C getPaginatedConnection(List<Pair<String, T>> dbResult, int pageSize, Integer totalCount, int maxNodes, Function<ConnectionImpl<T>, C> connectionFunction) {
         return connectionFunction.apply(createPagedResult(dbResult, pageSize, totalCount != null ? Math.min(maxNodes, totalCount) : null));
     }
 
-    protected <K, V, C> Map<KeyWithPath<K>, C> getPaginatedConnection(Map<KeyWithPath<K>, List<Pair<String, V>>> dbResult, int pageSize, Integer totalCount, int maxNodes, Function<ConnectionImpl<V>, C> connectionFunction) {
+    protected static <K, V, C> Map<KeyWithPath<K>, C> getPaginatedConnection(Map<KeyWithPath<K>, List<Pair<String, V>>> dbResult, int pageSize, Integer totalCount, int maxNodes, Function<ConnectionImpl<V>, C> connectionFunction) {
         return dbResult.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, entry -> connectionFunction.apply(createPagedResult(entry.getValue(), pageSize, totalCount != null ? Math.min(maxNodes, totalCount) : null))));
     }
 
-    protected <T> ConnectionImpl<T> createPagedResult(List<Pair<String, T>> dbResult, int pageSize, Integer totalCount) {
+    protected static <T> ConnectionImpl<T> createPagedResult(List<Pair<String, T>> dbResult, int pageSize, Integer totalCount) {
         var items = dbResult.subList(0, Math.min(dbResult.size(), pageSize));
-        DefaultPageInfo pageInfo;
-        if (items.isEmpty()) {
-            pageInfo = new DefaultPageInfo(null, null, false, dbResult.size() > pageSize);
-        } else {
-            var itemStart = items.get(0);
-            var itemEnd = items.get(items.size() - 1);
-            pageInfo = new DefaultPageInfo(
-                    new DefaultConnectionCursor(itemStart != null ? itemStart.getLeft() : null),
-                    new DefaultConnectionCursor(itemEnd != null ? itemEnd.getLeft() : null),
-                    false,
-                    dbResult.size() > pageSize
-            );
-        }
+        var pageInfo = getDefaultPageInfo(dbResult, pageSize, items);
 
         List<Edge<T>> edges = items
                 .stream()
@@ -127,9 +95,24 @@ public abstract class AbstractFetcher {
         return ConnectionImpl
                 .<T>builder()
                 .setPageInfo(pageInfo)
-                .setNodes(items.stream().map(Pair::getRight).collect(Collectors.toList()))
+                .setNodes(items.stream().map(Pair::getRight).toList())
                 .setEdges(edges)
                 .setTotalCount(totalCount)
                 .build();
+    }
+
+    private static <T> DefaultPageInfo getDefaultPageInfo(List<Pair<String, T>> dbResult, int pageSize, List<Pair<String, T>> items) {
+        if (items.isEmpty()) {
+            return new DefaultPageInfo(null, null, false, dbResult.size() > pageSize);
+        }
+
+        var itemStart = items.get(0);
+        var itemEnd = items.get(items.size() - 1);
+        return new DefaultPageInfo(
+                new DefaultConnectionCursor(itemStart != null ? itemStart.getLeft() : null),
+                new DefaultConnectionCursor(itemEnd != null ? itemEnd.getLeft() : null),
+                false,
+                dbResult.size() > pageSize
+        );
     }
 }
